Block columns spacing fix

--- a/assets/css/scss/components/_gutenberg-blocks.scss
+++ b/assets/css/scss/components/_gutenberg-blocks.scss
@@ -34,7 +34,7 @@
 		}
 		.wp-block-column{
 			@media (min-width: 782px) {
-				padding-right: 2rem;
+				padding-right: 3rem;
 			}
 			margin: 0;
 		}
